--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "illuminate/database": "^7.0|^8.0"
     },
     "license": "MIT",
-    "type": "composer-plugin",
+    "type": "library",
     "authors": [
         {
             "name": "Chris Page",
