--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
     "name": "motomedialab/maxscale-connector",
     "description": "Fixes database connection errors when routing Laravel database connections via MariaDB MaxScale",
     "require": {
-        "php": "^7.3",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/database": "^7.0|^8.0"
+        "php": "^7.3"
     },
     "license": "MIT",
     "type": "library",
